Deployments/YAMLs/QA/Netpol/aksengine-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: aksengine-netpol
  namespace: aks-engine-workshop-qa  
spec:
  podSelector:
    matchLabels:
      app: ratingsapi-pod
  policyTypes:
  - Ingress
  ingress:
  # - {}
  - ports:
    - protocol: TCP
      port: 3000
    from:
      - namespaceSelector:
          matchLabels:
            name: aks-engine-workshop-qa
      - podSelector:
          matchLabels:
            app: ratingsweb-pod
